Support online web source providing price pairs without decimal

Manually cherry-picked from 3cc0235040fcfa4566cbb262e46348a0721c012d and
adjusted

BUG:396797